# adventofcode2024

./: .gitignore  Cargo.toml
day1/puzzle1/: Cargo.toml
day1/puzzle1/src/: main.rs
day1/puzzle2/: Cargo.toml
day1/puzzle2/src/: main.rs
day10/puzzle1/: Cargo.toml
day10/puzzle1/src/: main.rs
day10/puzzle2/: Cargo.toml
day10/puzzle2/src/: main.rs
day11/puzzle1/: Cargo.toml
day11/puzzle1/src/: main.rs
day11/puzzle2/: Cargo.toml
day11/puzzle2/src/: main.rs
day12/puzzle1/: Cargo.toml
day12/puzzle1/src/: main.rs
day13/puzzle1/: Cargo.toml
day13/puzzle1/src/: main.rs
day14/puzzle1/: Cargo.toml
day14/puzzle1/src/: main.rs
day14/puzzle2/: Cargo.toml
day14/puzzle2/src/: main.rs
day15/puzzle1/: Cargo.toml
day15/puzzle1/src/: main.rs
day15/puzzle2/: Cargo.toml
day15/puzzle2/src/: main.rs
day16/puzzle1/: Cargo.toml
day16/puzzle1/src/: main.rs
day16/puzzle1_2/: Cargo.toml
day16/puzzle1_2/src/: main.rs
day16/puzzle2/: Cargo.toml
day16/puzzle2/src/: main.rs
day17/puzzle1/: Cargo.toml  input
day18/puzzle1/: Cargo.toml
day19/puzzle1/: Cargo.toml
day2/puzzle1/: Cargo.toml
day20/puzzle1/: Cargo.toml
day3/puzzle1/: Cargo.toml
day4/puzzle1/: Cargo.toml
day4/puzzle2/: Cargo.toml
day5/puzzle1/: Cargo.toml
day6/puzzle1/: Cargo.toml
day6/puzzle2/: Cargo.toml
day7/puzzle1/: Cargo.toml
day7/puzzle2/: Cargo.toml
day8/puzzle1/: Cargo.toml
day8/puzzle2/: Cargo.toml
day9/puzzle1/: Cargo.toml
day9/puzzle2/: Cargo.toml
test_proj/: Cargo.toml
test_proj/src/: main.rs
utils/: Cargo.toml
utils/src/: fs_utils.rs
(+18 files in other folders)
