[workspace]
resolver = "2"
members = [
    "day1/puzzle1",
    "day1/puzzle2",
    "day2/puzzle1",
    "day3/puzzle1",
    "day4/puzzle1",
    "day4/puzzle2",
    "day5/puzzle1",
    "day6/puzzle1",
    "day6/puzzle2",
    "day7/puzzle1",
    "day7/puzzle2",
    "day8/puzzle1",
    "day8/puzzle2",
    "day9/puzzle1",
    "day9/puzzle2",
    "day10/puzzle1",
    "day10/puzzle2",
    "day11/puzzle1",
    "day11/puzzle2",
    "test_proj",
    "utils/",
     "day12/puzzle1",
     "day13/puzzle1",
     "day14/puzzle1",
     "day14/puzzle2",
     "day15/puzzle1",
     "day15/puzzle2",
     "day16/puzzle1",
     "day16/puzzle1_2",
     "day16/puzzle2",
     "day17/puzzle1",
     "day18/puzzle1", "day19/puzzle1", "day20/puzzle1",
     ]
